welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:25: error: ':' expected but ')' found.
def isFacingTrail(couleur) : Boolean = {
                         ^SlugSnail:45: error: identifier expected but '}' found.
}
^